--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,13 @@
             <artifactId>jasperreports</artifactId>
 			<version>6.6.0</version>
         </dependency>
+		<dependency>
+			<groupId>com.lowagie</groupId>
+			<artifactId>itext</artifactId>
+			<version>4.2.0</version>
+		  </dependency>
+				  
+		  
 		<!-- CORREO ELECTRONICO -->
 		<dependency>
 			<groupId>javax.mail</groupId>
