--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,13 @@
 
 	</dependencies>
 
+	<repositories>
+		<repository>
+			<id>jaspersoft-third-party</id>
+			<url>http://jaspersoft.jfrog.io/jaspersoft/third-party-ce-artifacts/</url>
+		</repository>
+	</repositories>
+
 	<build>
 		<plugins>
 			<plugin>
