--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<groupId>com.defensoria.integral</groupId>
 	<artifactId>integral</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>integral</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
@@ -144,6 +144,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>intranet</finalName>
 	</build>
 
 
