--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<groupId>com.defensoria.integral</groupId>
 	<artifactId>integral</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>integral</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
